# facts-only-mf-assitant

./: .gitignore  .replit  README.md  app.py  architecture_document.md  example.env  pyproject.toml  replit.md  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
attached_assets/: Pasted-Build-a-Python-Streamlit-app-called-Facts-Only-MF-Assis_1776938808237.txt  Pasted-start-with-8-URLs-first-not-all-15-25-That-is-enough-to_1776940458109.txt
evaluation/: .gitignore  evaluator.py  results.json  test_cases.json  tiny_test.json
mf_assistant/: README.md  _debug_queries.py  app.py  build_facts.py  build_index.py  chunker.py  comparison_results.md  config.py  fact_extractor.py  fact_intent.py  facts_store.py  generate_comparison.py  ingest.py  llm_client.py  memory.py  normalizer.py  parser.py  pipeline.py  prompts.py  responder.py  retriever.py  router.py  sample_qa.md  sources.csv  test_memory.py  thread_store.py
mf_assistant/data/: threads.json
mf_assistant/data/chunks/: chunks.jsonl
mf_assistant/data/facts/: facts.jsonl
mf_assistant/data/index/: chunks.json  faiss.index  info.json  matrix.pkl  meta.jsonl  vectorizer.pkl
mf_assistant/data/normalized/: HDFC_ELSS_KIM.json  HDFC_ELSS_PAGE.json  HDFC_FACTSHEETS_INDEX.json  HDFC_FLEXICAP_KIM.json  HDFC_FLEXICAP_PAGE.json  HDFC_MIDCAP_KIM.json  HDFC_MIDCAP_PAGE.json  HDFC_SMALLCAP_PAGE.json  HDFC_TOP100_KIM.json
mf_assistant/data/raw/: HDFC_ELSS_PAGE_e52cf00c375da2d8.html  HDFC_FACTSHEETS_INDEX_c579b77b138aa81b.html  HDFC_FLEXICAP_PAGE_7190a3637923bad1.html  HDFC_MIDCAP_PAGE_263a30a5876a3a0c.html  (+1 more)
